// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrdersAndSubscriptions /> Renders correctly in various states renders alerts on errors 1`] = `
<div
  className="page__orders-and-subscriptions container-fluid py-4.5"
>
  <div
    className="section"
  >
    <div
      className="fade alert-content alert alert-danger show"
      role="alert"
    >
      <span
        className="pgn__icon alert-icon"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="pgn__alert-message-wrapper"
      >
        <div
          className="alert-message-content"
        >
          <div
            className="alert-heading h4"
          >
            Something went wrong.
          </div>
          <p>
            Refresh this page and try again. If this problem persists, 
            <a
              className="pgn__hyperlink default-link standalone-link"
              href="http://localhost:18000/support/hc/requests/new"
              onClick={[Function]}
              target="_self"
            >
              contact support
            </a>
            .
          </p>
        </div>
      </div>
    </div>
    <h1
      className="text-primary-700"
    >
      My orders and subscriptions
    </h1>
    <span
      className="text-dark-900"
    >
      Manage your program subscriptions and view your order history.
    </span>
  </div>
  <section>
    <h2>
      Subscriptions
    </h2>
    <span
      className="text-dark-900"
    >
      You do not have any active or previous subscriptions.
    </span>
    <div
      className="fade alert-content bg-light-200 alert show"
      role="alert"
    >
      <div
        className="pgn__alert-message-wrapper"
      >
        <div
          className="alert-message-content"
        >
          <h4
            className="section section-gap-sm flex-sm-row align-items-start alert-heading"
          >
            <span
              className="badge badge-warning"
            >
              New
            </span>
            Monthly program subscriptions 
            —
             more flexible, more affordable
          </h4>
          <p>
            Now available for many popular programs, affordable monthly subscription pricing can help you manage your budget more effectively. Subscriptions start at $39/month USD per program, after a 7-day full access free trial. Cancel at any time.
          </p>
        </div>
        <div
          className="pgn__alert-actions pgn__action-row"
        >
          <span
            className="pgn__action-row-spacer"
          />
          <button
            className="text-nowrap btn btn-primary btn-sm"
            disabled={false}
            type="button"
          >
            Explore subscription options
          </button>
        </div>
      </div>
    </div>
  </section>
  <section
    className="page__order-history"
  >
    <h2>
      Order History
    </h2>
    <div>
      <p>
        Orders you place with localhost will appear here.
      </p>
    </div>
  </section>
</div>
`;

exports[`<OrdersAndSubscriptions /> Renders correctly in various states renders with loadingErrors 1`] = `
<div
  className="page__orders-and-subscriptions container-fluid py-4.5"
>
  <div
    className="section"
  >
    <h1
      className="text-primary-700"
    >
      My orders and subscriptions
    </h1>
    <span
      className="text-dark-900"
    >
      Manage your program subscriptions and view your order history.
    </span>
  </div>
  <div>
    <div
      className="d-flex justify-content-center align-items-center flex-column"
      style={
        Object {
          "height": "50vh",
        }
      }
    >
      <div
        className="spinner-border text-primary"
        role="status"
      >
        <span
          className="sr-only"
        >
          Loading orders and subscriptions...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrdersAndSubscriptions /> Renders correctly in various states renders with orders and subscriptions 1`] = `
<div
  className="page__orders-and-subscriptions container-fluid py-4.5"
>
  <div
    className="section"
  >
    <h1
      className="text-primary-700"
    >
      My orders and subscriptions
    </h1>
    <span
      className="text-dark-900"
    >
      Manage your program subscriptions and view your order history.
    </span>
  </div>
  <section>
    <h2>
      Subscriptions
    </h2>
    <div
      className="section flex-md-row align-items-start align-items-md-center justify-content-between"
    >
      <span
        className="text-dark-900"
      >
        You have 2 active subscriptions. To view your receipts, change your payment method or cancel your subscription, click 
        <i>
          Manage my subscriptions
        </i>
        .
      </span>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-default text-nowrap btn btn-primary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          <span>
            Manage my subscriptions
          </span>
        </span>
        <span
          className="pgn__icon pgn__icon__sm btn-icon-after"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 19H5V5h7V3H3v18h18v-9h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      className="section section-gap-lg"
    >
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="http://localhost:18000/dashboard/programs/a87e5eac-3c93-45a1-a8e1-4c79ca8401c8"
        onClick={[Function]}
        target="_self"
      >
        <div
          className="bg-light-200 p-3 pgn__card pgn__card-light card"
          tabIndex={-1}
        >
          <div
            className="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
          >
            <h3
              className="text-info-500 m-0"
            >
              Blockchain Fundamentals
            </h3>
            <span
              className="text-capitalize badge badge-warning"
            >
              trial
            </span>
          </div>
          <p
            className="small text-gray-500 m-0"
          >
            University of California, Berkeley
          </p>
        </div>
      </a>
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="http://localhost:18000/dashboard/programs/0c6e5fa2-96e8-40b2-9ebe-c8b0df2a3b22"
        onClick={[Function]}
        target="_self"
      >
        <div
          className="bg-light-200 p-3 pgn__card pgn__card-light card"
          tabIndex={-1}
        >
          <div
            className="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
          >
            <h3
              className="text-info-500 m-0"
            >
              Critical Thinking
            </h3>
            <span
              className="text-capitalize badge badge-success"
            >
              active
            </span>
          </div>
          <p
            className="small text-gray-500 m-0"
          >
            Simmons University
          </p>
        </div>
      </a>
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="http://localhost:18000/dashboard/programs/a87e5eac-3c93-45a1-a8e1-4c79ca8401c8"
        onClick={[Function]}
        target="_self"
      >
        <div
          className="bg-light-200 p-3 pgn__card pgn__card-light card"
          tabIndex={-1}
        >
          <div
            className="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
          >
            <h3
              className="text-info-500 m-0"
            >
              Blockchain Fundamentals
            </h3>
            <span
              className="text-capitalize badge badge-light"
            >
              inactive
            </span>
          </div>
          <p
            className="small text-gray-500 m-0"
          >
            University of California, Berkeley
          </p>
        </div>
      </a>
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="http://localhost:18000/dashboard/programs/0c6e5fa2-96e8-40b2-9ebe-c8b0df2a3b22"
        onClick={[Function]}
        target="_self"
      >
        <div
          className="bg-light-200 p-3 pgn__card pgn__card-light card"
          tabIndex={-1}
        >
          <div
            className="section flex-column-reverse flex-sm-row align-items-start align-items-sm-center"
          >
            <h3
              className="text-info-500 m-0"
            >
              Critical Thinking
            </h3>
            <span
              className="text-capitalize badge badge-light"
            >
              inactive
            </span>
          </div>
          <p
            className="small text-gray-500 m-0"
          >
            Simmons University
          </p>
        </div>
      </a>
    </div>
  </section>
  <section
    className="page__order-history"
  >
    <h2>
      Order History
    </h2>
    <div>
      <nav
        aria-label="pagination navigation"
        className="pagination-margin pagination-default"
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          aria-relevant="text"
          className="sr-only"
        >
          Page 2, Current Page, of 10
        </div>
        <ul
          className="pagination"
        >
          <li
            className="page-item"
          >
            <button
              aria-label="Previous, Page 1"
              className="previous page-link btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <div>
                <span
                  className="pgn__icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                Previous
              </div>
            </button>
          </li>
          <li
            className="page-item"
          >
            <button
              aria-label="Next, Page 3"
              className="next page-link btn btn-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <div>
                Next
                <span
                  className="pgn__icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="none"
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </section>
</div>
`;
